src/styles.module.css
/* add css module styles here (optional) */

.container {
  font-size: 2em;
  width: 100%;
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  align-items: center;
}

.inputContainer {
  position: relative;
  flex: 1;
  display: flex;
  height: 45px;

  @media (max-width: 768px) {
    height: 30px;
  }
}

.input {
  padding-left: 38px;
  padding-right: 75px;
  padding-block: 8px;
  flex: 1;
  border-radius: 10px;
  border: 0.5px solid gray;
  box-shadow: 0px 4px 4px 0px #00000040;

  font-size: 16px;
  @media (max-width: 768px) {
    font-size: 12px;
  }
}

.input:focus {
  outline: none;
}

.input::placeholder {
  opacity: 1;
  transition: opacity 0.3s ease; /* Adjust the duration and timing function as needed */
}

.input.placeholderHidden::placeholder {
  opacity: 0;
}

.searchOverlay {
  position: absolute;
  z-index: 9999999;
  left: 0;
  width: 100%;
  transition: top 0.4s ease-in-out;
  display: flex;
}

.searchResultBox {
  border-radius: 10px;
  min-height: 300px;
  max-height: calc(100vh - 2em);
  margin-inline: 4em;
  flex: 1;
  display: flex;
  box-shadow: 0px 4px 10px 0px #00000040;
  border: 1px solid #0000004d;
  @media (max-width: 768px) {
    margin-inline: 0.3em;
  }
}

.slideDown {
  top: var(--top-position); /* slide down animation */
}

.slideUp {
  top: -1000px; /* slide up animation */
}

.innerSearch {
  flex: 1;
  border-radius: 10px;
  padding: 0.5em 1.5em;
  /* backdrop-filter: brightness(0.4) blur(15px); */
  background-color: white;
  color: black;
  border: 1px solid rgba(255, 255, 255, 0.7);
  /* box-shadow: 0px -9px 30px rgba(0, 0, 0, 0.5); */
  font-size: 18px;
  overflow-y: auto;

  @media (max-width: 768px) {
    padding: 1em 0.7em;
  }
}

.innerSearch.light {
  /* backdrop-filter: brightness(15) blur(20px); */
  border: 1px solid rgba(0, 0, 0, 0.7);
  background-color: white;
  /* color: black; */
  color: white;
}

.innerSearch.centerAlign {
  display: flex;
  justify-content: center;
  align-items: center;
  text-align: center;
}

.searchIcon {
  position: absolute;
  top: 50%;
  transform: translate(50%, -50%);
  /* left: 5px; */
}

.sendButton {
  position: absolute;
  top: 50%;
  transform: translate(-13%, -50%);
  right: 0;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: white;
  border-radius: 7px;
  border: 1px solid gray;
  padding: 6px 10px;
  @media (max-width: 768px) {
    padding: 3px 10px;
  }
}

.close {
  cursor: pointer;
  position: absolute;
  top: 50%;
  transform: translate(-340%, -50%);
  right: 0;
}

.sendButton.iconActive {
  cursor: pointer;
  background-color: black;
  border-radius: 7px;
  border: 1px solid black;
}

.message {
  margin-bottom: 2em;
  font-size: 16px;
  font-weight: 400;

  @media (max-width: 768px) {
    font-size: 14px;
  }
}

.cardContainer {
  display: grid;
  grid-template-columns: repeat(1, 1fr);
  column-gap: 10px;
  row-gap: 15px;
  margin-bottom: 2em;

  @media (max-width: 768px) {
    grid-template-columns: repeat(1, 1fr);
    row-gap: 5px;
  }
}

.singleCard {
  border: 1px solid rgba(255, 255, 255, 0.1);
  padding: 0.5em;
  border-radius: calc(5px + 0.5em);
  text-decoration: none;
  background-color: rgba(198, 198, 198, 0.2);
  display: flex;
  justify-content: flex-start;
  align-items: center;
  opacity: 0;
  animation: fadeIn 0.5s ease forwards;
  animation-delay: calc(0.3s * var(--index));
  color: black;
  position: relative;
}

.singleCard.light {
  color: black;
  background-color: rgba(0, 0, 0, 0.1);
}

.singleCard img {
  height: 90px;
  width: 90px;
  border-radius: 5px;
  margin-right: 20px;

  @media (max-width: 768px) {
    height: 60px;
    width: 60px;
    margin-right: 20px;
  }
}

.content h3 {
  margin-top: 0;
  margin-bottom: 10px;
  font-size: 18px;
  display: -webkit-box;
  overflow: hidden;
  text-overflow: ellipsis;
  -webkit-line-clamp: 1; /* number of lines to show */
  line-clamp: 2;
  -webkit-box-orient: vertical;
  box-orient: vertical;
  padding-right: 20px;
  @media (max-width: 768px) {
    font-size: 16px;
  }
}

.content p {
  margin: 0;
  font-size: 16px;
  display: -webkit-box;
  overflow: hidden;
  text-overflow: ellipsis;
  -webkit-line-clamp: 3;
  line-clamp: 3;
  -webkit-box-orient: vertical;
  box-orient: vertical;
  @media (max-width: 768px) {
    font-size: 12px;
  }
}

.linkIcon {
  position: absolute;
  top: 10px;
  right: 10px;
  background-color: black;
  border-radius: 50%;
  display: flex;
  justify-content: center;
  align-items: center;
  width: 18px;
  height: 18px;
}

.buttonContainer {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  align-items: center;
  justify-content: flex-start;
  gap: 10px;
  margin-bottom: 1em;
}

.suggested {
  font-size: 14px;
  margin: 0;
  margin-bottom: 1em;
  color: #ffffff;
}

.suggested.light {
  color: #000000;
}

.followUp {
  animation: fadeIn 0.5s ease forwards;
  animation-delay: calc(0.3s * var(--index));
  background-color: grey;
  border-radius: 10px;
  color: #ffffff;
  cursor: pointer;
  opacity: 0;
  padding: 0.5em 1em;
  border: 1px solid rgba(255, 255, 255, 0.1);
  background-color: rgba(0, 0, 0, 0.2);
  font-size: 14px;
  text-align: start;
}

.followUp.light {
  color: #000000;
  background-color: rgba(0, 0, 0, 0.1);
}

@keyframes fadeIn {
  from {
    opacity: 0;
    transform: translateY(20px);
  }
  to {
    opacity: 1;
    transform: translateY(0);
  }
}

.loader {
  animation: rotate 1s infinite;
  height: 50px;
  width: 50px;
}

.loader:before,
.loader:after {
  border-radius: 50%;
  content: '';
  display: block;
  height: 20px;
  width: 20px;
}
.loader:before {
  animation: ball1 1s infinite;
  background-color: #fff;
  box-shadow: 30px 0 0 #ff3d00;
  margin-bottom: 10px;
}
.loader:after {
  animation: ball2 1s infinite;
  background-color: #ff3d00;
  box-shadow: 30px 0 0 #fff;
}

@keyframes rotate {
  0% {
    transform: rotate(0deg) scale(0.8);
  }
  50% {
    transform: rotate(360deg) scale(1.2);
  }
  100% {
    transform: rotate(720deg) scale(0.8);
  }
}

@keyframes ball1 {
  0% {
    box-shadow: 30px 0 0 #ff3d00;
  }
  50% {
    box-shadow: 0 0 0 #ff3d00;
    margin-bottom: 0;
    transform: translate(15px, 15px);
  }
  100% {
    box-shadow: 30px 0 0 #ff3d00;
    margin-bottom: 10px;
  }
}

@keyframes ball2 {
  0% {
    box-shadow: 30px 0 0 #fff;
  }
  50% {
    box-shadow: 0 0 0 #fff;
    margin-top: -20px;
    transform: translate(15px, 15px);
  }
  100% {
    box-shadow: 30px 0 0 #fff;
    margin-top: 0;
  }
}

.skeletonSquare {
  display: block;
  width: 50%;
  height: 150px;
  background: linear-gradient(
    -90deg,
    rgba(100, 99, 99, 0.1) 25%,
    rgba(40, 39, 39, 0.15) 50%,
    rgba(0, 0, 0, 0.1) 75%
  );
  background-size: 200% 100%;
  animation: skeleton-loading 1.5s infinite;
  border-radius: 4px;
  margin: 8px 0;
}

.skeleton {
  display: block;
  width: 100%;
  flex: 1;
  height: 55px;
  margin: 8px 0;
  background: linear-gradient(
    -90deg,
    rgba(81, 80, 80, 0.1) 25%,
    rgba(45, 44, 44, 0.15) 50%,
    rgba(0, 0, 0, 0.1) 75%
  );
  background-size: 200% 100%;
  animation: skeleton-loading 1.5s infinite;
  border-radius: 4px;
}
@keyframes skeleton-loading {
  0% {
    background-position: 200% 0;
  }
  100% {
    background-position: -200% 0;
  }
}

.hideOnSmall {
  display: block;
}
.skeletonLine {
  width: 100%;
}
.skeletonSquareContainer {
  display: flex;
  width: 100%;
  gap: 12px;
}

